--- a/src/nodesystem/fullscreenPrompt/fullscreenPrompt.css
+++ b/src/nodesystem/fullscreenPrompt/fullscreenPrompt.css
@@ -19,6 +19,7 @@
 	padding-top: 0.5em;
 	border-radius: 12px;
 	border: solid 1px rgb(133, 133, 133);
+	position: relative;
 }
 
 .parameter {
@@ -61,5 +62,16 @@ ul {
 	font-weight: bold;
 }
 
-button {
+.cancelbtn {
+	position: absolute;
+	top: 0;
+	right: 0;
+	background-color: transparent;
+	color: #fff;
+	border: none;
+	padding: 0.5rem;
+	padding-right: 0.7rem;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bold;
+	font-size: 1.1rem;
 }
