small bug fixes

--- a/src/nodesystem/toastmessage/toastMessage.css
+++ b/src/nodesystem/toastmessage/toastMessage.css
@@ -68,6 +68,7 @@
 	justify-content: space-between;
 	align-items: center;
 	transition: all 0.3s ease;
+	z-index: 3;
 }
 
 .toast-message-disappearing {
