--- a/src/nodesystem/toastmessage/toastMessage.css
+++ b/src/nodesystem/toastmessage/toastMessage.css
@@ -59,7 +59,7 @@
 	border-style: solid;
 	padding: 1rem;
 	margin-bottom: 0.5rem;
-	width: 20rem;
+	min-width: 20rem;
 	align-self: center;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
 		'Helvetica Neue', sans-serif;
@@ -71,6 +71,11 @@
 	z-index: 3;
 }
 
+.toast-message-text {
+	margin-left: 1rem;
+	margin-right: 1rem;
+}
+
 .toast-message-disappearing {
 	opacity: 0;
 	height: 0;
@@ -78,4 +83,13 @@
 	margin-bottom: 0rem;
 	padding: 0;
 	border-width: 0px;
+}
+
+.toast-message:last-child.toast-message-disappearing {
+	opacity: 0;
+	height: unset;
+	font-size: unset;
+	margin-bottom: unset;
+	padding: unset;
+	border-width: unset;
 }
