Add possibility to create custom nodes

--- a/src/nodesystem/fullscreenPrompt/fullscreenPrompt.css
+++ b/src/nodesystem/fullscreenPrompt/fullscreenPrompt.css
@@ -21,6 +21,8 @@
 	border: solid 1px rgb(133, 133, 133);
 	position: relative;
 	min-width: 20rem;
+	overflow-y: auto;
+	max-height: 90vh;
 }
 
 .parameter {
