--- a/src/nodesystem/fullscreenPrompt/fullscreenPrompt.css
+++ b/src/nodesystem/fullscreenPrompt/fullscreenPrompt.css
@@ -65,6 +65,14 @@ ul {
 	font-weight: bold;
 }
 
+.list-folder {
+	background: #2c2c2c;
+}
+
+.list-folder:hover {
+	background: #1e1e1e;
+}
+
 .cancelbtn {
 	position: absolute;
 	top: 0;
