Add wolfram alpha boolean expression simplification
Also allows for different boolean expression notations

--- a/src/nodesystem/floatingModal/floatingModal.css
+++ b/src/nodesystem/floatingModal/floatingModal.css
@@ -75,3 +75,9 @@ tr:nth-child(even) {
 	pointer-events: auto;
 	user-select: auto;
 }
+
+.floating-modal-body {
+	overflow: auto;
+	max-height: 80vh;
+	white-space: pre-line;
+}
